--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,7 +1,20 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
+.App div {
+  width:25%;
+}
+
+.App .formContainer {
+  width: 100%;
+}
+.App .formContainer .form{
+  width: 100%;
+}
 
 .App-header {
   background-color: #282c34;
